--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(paC)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(paC main.cpp ghost.cpp ghost.h Game.cpp Game.h Gamepiece.cpp GamePiece.h)
+add_executable(paC main.cpp Ghost.cpp Ghost.h Game.cpp Game.h Gamepiece.cpp GamePiece.h)
